# eezze-assistant

./: .gitignore  conversation-summary.md  eezze.config.ts  overview-intent.md  package-lock.json  package.json  todos.md  tsconfig.json
rust/client/: Cargo.toml
rust/client/src/: main.rs
rust/rlm/: Cargo.toml  README.md  dev_request.json  init.sh
rust/rlm/docs/: api.response.issues.md
rust/rlm/features/: chat-actions.md  thinking.md
rust/rlm/src/: cli.rs  eezze_config.rs  lib.rs  main.rs  rlm_server.rs  state.rs
rust/rlm/src/api/: chat.rs  index.rs  mod.rs  models.rs
rust/rlm/src/index/: embed.rs  mod.rs  retrieve.rs  store.rs  types.rs
rust/rlm/src/llm/: mod.rs  ollama.rs  types.rs  verifier.rs
rust/rlm/src/orchestrator/: confidence.rs  escalate.rs  loop.rs  mod.rs  plan.rs  revise.rs  types.rs
rust/rlm/src/prompts/: completion.rs  mod.rs  plan.rs  revise.rs  verify.rs
rust/rlm/src/server/: http.rs  routes.rs
rust/rlm/src/types/: chat.rs  config.rs  mod.rs  openai.rs
rust/rlm/src/utils/: hash.rs  lang.rs  logger.rs  mod.rs  stream.rs  timer.rs
src/: main.ts
src/api/: chat.ts  index.ts  models.ts
src/index/: embed.ts  retrieve.ts  store.ts  types.ts
src/llm/: ollama.ts  types.ts  verifier.ts
src/orchestrator/: confidence.ts  escalate.ts  loop.ts  plan.ts  revise.ts  types.ts
src/prompts/: plan.ts  revise.ts  verify.ts
src/server/: http.ts  routes.ts
src/types/: chat.ts  config.ts  openai.ts
src/utils/: hash.ts  logger.ts  stream.ts  timer.ts
