 [package]
name = "eezze"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
dirs-next = "2.0"
env_logger = "0.10"
fasttext = "0.7"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
ollama-rs = "0.1"
ratatui = "0.26"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
regex = "1.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tiktoken-rs = "0.2"
which = "6.0"
whoami = "1.5"
indexmap = "2.4"

[[bin]]
name = "eezze"
path = "src/cli.rs"
